--- a/src-capacitor/android/app/src/main/res/values/strings.xml
+++ b/src-capacitor/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Quasar App</string>
-    <string name="title_activity_main">Quasar App</string>
-    <string name="package_name">org.capacitor.quasar.app</string>
-    <string name="custom_url_scheme">org.capacitor.quasar.app</string>
+    <string name="app_name">Vortex Visor</string>
+    <string name="title_activity_main">Vortex Visor</string>
+    <string name="package_name">com.espoleta.vortex.v1.app</string>
+    <string name="custom_url_scheme">com.espoleta.vortex.v1.app</string>
 </resources>
